hphp/test/zend/good/Zend/tests/debug_info-error-object.php
<?php

class C {
  public $val;
  public function __debugInfo() {
    return $this->val;
  }
  public function __construct($val) {
    $this->val = $val;
  }
}

$c = new C(new stdClass);
var_dump($c);