hphp/test/zend/bad/Zend/tests/generators/generator_closure_with_this.php
<?php

class Test {
    public function getGenFactory() {
        return function() {
            yield $this;
        };
    }
}

$genFactory = (new Test)->getGenFactory();
var_dump($genFactory()->current());

?>